<resources>
    <string name="app_name">MineKotlinProject</string>

    <string name="login_input_name">请输入登陆账号名</string>
    <string name="login_input_password">请输入登陆密码</string>
    <string name="login_input_password_again">请再次输入密码，并确保两次的密码一致</string>
    <string name="login">登陆</string>
    <string name="ready_signup">还未有账号，前去注册</string>
    <string name="signup">注册</string>
    <string name="cancel">取消</string>

    <string name="home">首页</string>
    <string name="collect">收藏</string>
    <string name="mine">个人</string>
</resources>