<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/home_fragment">

    <action android:id="@+id/action_pop_to_top"
        app:popUpTo="@id/home_fragment"
        app:popUpToInclusive="true"
        />

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.example.kotlin.project.mine.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"
        >
    </fragment>

    <fragment
        android:id="@+id/collect_fragment"
        android:name="com.example.kotlin.project.mine.collect.CollectFragment"
        android:label="@string/collect"
        tools:layout="@layout/fragment_collect"
        />

    <fragment
        android:id="@+id/mine_fragment"
        android:name="com.example.kotlin.project.mine.mine.MineFragment"
        android:label="@string/mine"
        tools:layout="@layout/fragment_mine"
        />

</navigation>